--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rimraf dist && rollup -c rollup.config.js",
     "start": "es-dev-server --node-resolve --watch --open"
   },
   "repository": {
@@ -24,12 +25,16 @@
   "homepage": "https://github.com/soelen/threejs-codingchallenge#readme",
   "dependencies": {
     "lit-element": "^2.2.1",
-    "three": "^0.114.0"
+    "three": "^0.126.1"
   },
   "devDependencies": {
-    "es-dev-server": "^1.41.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@open-wc/building-rollup": "^0.22.1",
+    "es-dev-server": "^1.42.0",
     "jsdom": "^16.2.0",
     "pretty": "^2.0.0",
-    "prompt": "^1.0.0"
+    "prompt": "^1.0.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^1.32.0"
   }
 }
